Roundcube Webmail SieveRules
============================

2011 09 24
==========
 * Add plugin hook sieverules_connect

2011 08 28
==========
 * Fix typo, hook name should be sieverules_save

2011 08 24
==========
 * Improve plugin hook sieverules_saved

2011 08 20
==========
 * Add plugin hook sieverules_saved

2011 08 06
==========
 * Improve fileinto :create, now requires mailbox extension

2011 06 19
==========
 * Add button to insert sig into vacation message

2011 05 06
==========
 * Use JQueryUI plugin for dialog box (r4715)

2011 03 12
==========
 * Allow users to enter folder names for fileinto

2011 02 03
==========
 * idn_to_ascii -> rcube_idn_to_ascii (r4484)

2011 01 31
==========
 * Fix double request when clicking on tab using Firefox (from r4472)

2011 01 29
==========
 * Enable :from and :handle options for vaction

2010 10 26
==========
 * Added support for SASL proxy authentication

2010 10 14
==========
 * Automatically import rulesets when auto_load_default is true, multiplerules is false and it is the active ruleset

2010 10 02
==========
 * Add debug logging

2010 09 29
==========
 * Add Internationalized Domain Name (IDNA) support (r4009)

2010 09 19
==========
 * Allow free entry of vacation alias addresses

2010 09 06
==========
 * Fix duplicate comparator listing

2010 07 03
==========
 * Update to Net_Sieve 1.3.0

2010 06 19
==========
 * Skin update after r3757

2010 06 15
==========
 * Update to Net_Sieve 1.2.2

2010 06 13
==========
 * Update skin r3733

2010 06 04
==========
 * Add support for %n and %d in host (r3701)

2010 04 24
==========
 * Add support for date extension

2010 04 19
==========
 * Update to Net_Sieve 1.2.1

2010 04 06
==========
 * Update to Net_Sieve 1.2.0

2010 03 27
==========
 * Use same folder path as RC by default

2010 03 06
==========
 * Use imap_connect after r3278

2010 02 14
==========
 * The Sender header is not always present, test From by default instead

2010 01 29
==========